testdata/err/string_literal_bad_escape_sequence.err.txt
error: unexpected token
- testdata/err/string_literal_bad_escape_sequence.tn:1:16
1 | main = || -> { "foo \x bar \y baz" };
  |                ^^^^^^^^^^^^^^^^^^^
help: valid tokens at this point: ["}", IdentifierName]
